@@ -1,7 +1,7 @@
 package com.marmitt.application.spring.service;
 
-import com.marmitt.application.spring.controller.dto.WebSocketConnectRequest;
 import com.marmitt.core.dto.common.CurrencyPair;
+import com.marmitt.core.dto.websocket.request.WebSocketConnectRequest;
 import com.marmitt.core.dto.websocket.request.StreamSubscriptionRequest;
 import com.marmitt.core.dto.websocket.response.WebSocketConnectionResponse;
 import com.marmitt.core.enums.StreamAction;
@@ -10,8 +10,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 @Slf4j
 public class ExchangeConnectService {
@@ -33,7 +31,7 @@ public class ExchangeConnectService {
     private StreamSubscriptionRequest buildStreamSubscriptionRequest(WebSocketConnectRequest request) {
         List<CurrencyPair> coreCurrencyPairs = request.symbols().stream()
                 .map(pair -> new CurrencyPair(pair.baseCurrency(), pair.quoteCurrency(), pair.streamType()))
-                .collect(Collectors.toList());
+                .toList();
 
         return new StreamSubscriptionRequest(request.exchange(),coreCurrencyPairs, StreamAction.SUBSCRIBE);
     }
